--- a/client/src/components/sections/sections.css
+++ b/client/src/components/sections/sections.css
@@ -25,7 +25,8 @@
 }
 
 .main-section__content {
-    height: 400px;
+    height: 100%;
+    border: 1px solid black;
 }
 
 .main-section__content.active {
@@ -38,4 +39,33 @@
 
 .main-section__content.right {
     width: 150px;
+}
+
+.main-section__content-photos {
+    padding: 1rem;
+}
+
+.main-section__content-photos.left,
+.main-section__content-photos.right {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.main-section__content-photos.active {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+.photo {
+    width: 100%;
+    height: 150px;
+    border-radius: 8px;
+    filter: drop-shadow(2px 2px 5px #000);
+}
+
+.main-section__content-photos.left > .photo,
+.main-section__content-photos.right > .photo {
+    filter: grayscale();
 }
