--- a/client/src/components/sections/sections.css
+++ b/client/src/components/sections/sections.css
@@ -8,15 +8,19 @@
     align-items: baseline;
 }
 
+.sections__titles section {
+    width: 13%;
+}
+
 .sections__content {
     display: flex;
     align-items: baseline;
+    width: 100%;
 }
 
 .main-section__title {
     padding: 1rem;
     cursor: pointer;
-    width: 150px;
     text-align: center;
 }
 
@@ -26,19 +30,20 @@
 
 .main-section__content {
     height: 100%;
-    border: 1px solid black;
+    transition: all .2s ease;
+    background-color: aliceblue;
 }
 
 .main-section__content.active {
-    width: 400px;
+    width: 61%;
 }
 
 .main-section__content.left {
-    width: 150px;
+    width: 13%;
 }
 
 .main-section__content.right {
-    width: 150px;
+    width: 13%;
 }
 
 .main-section__content-photos {
@@ -54,7 +59,7 @@
 
 .main-section__content-photos.active {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
 }
 
